2010-07-02       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  fixes for MakeAddr and CodeAddr.
	  Incorrect definition of GetSizeOfInBits and incorrect type of
	  max, bits now fixed.
	* gm2/gm2-compiler/gccgm2.def:  corrected return type of
	  GetSizeOfInBits.

2010-07-01       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  added test for procedure type
	  parameter which is coerced if it is not a procedure.
	* Fixed bug reported by Scott Iverson
	  (http://lists.gnu.org/archive/html/gm2/2010-06/msg00047.html)
	* gm2/gm2-compiler/M2GenGCC.mod:  (New procedure)
	  IsCoerceableParameter is now used to decide whether the
	  parameter type can be coersed.
	* gm2/gm2-compiler/M2System.mod:  removed SetN(64) from the
	  list of possible fixed sized data types.

2010-06-30       Gaius Mulley <gaius@gnu.org>

	* Fixed bug reported by Scott Iverson
	  (http://lists.gnu.org/archive/html/gm2/2010-06/msg00045.html)
	* gm2/gm2-libs/FIO.def:  added new parameter to OpenForRandom.
	* gm2/gm2-libs/FIO.mod:  made corresponding changes to
	  implementation.  Allows a file to be opened in write mode
	  without destroying earlier contents.
	* gm2/gm2-libs-iso/RndFile.mod:  seek to previous location
	  using SetPos.  Use toWrite rather than toRead.  Modify
	  newCid accordingly and all callees.
	* gm2/gm2-libs/SFIO.def:  added newfile parameter to
	  OpenForRandom.
	* gm2/gm2-libs/SFIO.mod:  added newfile parameter to
	  OpenForRandom.

2010-06-29       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2BasicBlock.mod:  do not throw away
	  quadruples which are initialising a constant.
	* gm2/gm2-compiler/M2GCCDeclare.mod:  added debug symbol
	  comment.
	* gm2/gm2-compiler/M2Quads.def:  export and declare
	  IsInitialisingConst.
	* gm2/gm2-compiler/M2Quads.mod:  (New procedure)
	  IsInitialisingConst.
	* Fixed bug reported by Scott Iverson.  An early
	  return statement could prevent constants from being
	  initialised.
	