@@ -1,3 +1,9 @@
+2010-07-05       Gaius Mulley <gaius@gnu.org>
+
+	* gm2/gccgm2.c:  gccgm2_BuildBinarySetDo convert parameters
+	  into their respective types.  Fixes bugs in the i386 port
+	  when manipulating large sets.
+
 2010-07-02       Gaius Mulley <gaius@gnu.org>
 
 	* gm2/gm2-compiler/M2GenGCC.mod:  fixes for MakeAddr and CodeAddr.
